--- a/data/seasons.config
+++ b/data/seasons.config
@@ -1,5 +1,19 @@
 [
   {
+    "id": "2025-q3",
+    "name": "2025年第3季",
+    "images": "images/2025-q3/",
+    "paths": {
+      "teams": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRQkqPUjoT4eLLJxhxkqnlDBBNZi7lA2kW_R2kCOWQkCqPOzBuEdO2r1MEuWGANZVBjpSmgGIKypo-M/pub?gid=1443677893&single=true&output=csv",
+      "players": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRQkqPUjoT4eLLJxhxkqnlDBBNZi7lA2kW_R2kCOWQkCqPOzBuEdO2r1MEuWGANZVBjpSmgGIKypo-M/pub?gid=1817563659&single=true&output=csv",
+      "roster": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRQkqPUjoT4eLLJxhxkqnlDBBNZi7lA2kW_R2kCOWQkCqPOzBuEdO2r1MEuWGANZVBjpSmgGIKypo-M/pub?gid=307396855&single=true&output=csv",
+      "games": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRQkqPUjoT4eLLJxhxkqnlDBBNZi7lA2kW_R2kCOWQkCqPOzBuEdO2r1MEuWGANZVBjpSmgGIKypo-M/pub?gid=524436579&single=true&output=csv",
+      "team_stats": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRQkqPUjoT4eLLJxhxkqnlDBBNZi7lA2kW_R2kCOWQkCqPOzBuEdO2r1MEuWGANZVBjpSmgGIKypo-M/pub?gid=433132589&single=true&output=csv",
+      "player_stats": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRQkqPUjoT4eLLJxhxkqnlDBBNZi7lA2kW_R2kCOWQkCqPOzBuEdO2r1MEuWGANZVBjpSmgGIKypo-M/pub?gid=788027527&single=true&output=csv",
+      "top_players": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRQkqPUjoT4eLLJxhxkqnlDBBNZi7lA2kW_R2kCOWQkCqPOzBuEdO2r1MEuWGANZVBjpSmgGIKypo-M/pub?gid=1285300378&single=true&output=csv"
+    }
+  },
+  {
     "id": "2025-q2",
     "name": "2025年第2季",
     "images": "images/2025-q2/",
