add terms and game rules

--- a/data/global.config
+++ b/data/global.config
@@ -1,4 +1,5 @@
 {
   "seasons": "https://docs.google.com/spreadsheets/d/e/2PACX-1vTWPXPWfvrt423Vk-e9BtU0CnSrEDorxQAL7Q3QgdvrDs4WDdAAZExZYn_jLkUJwEoNAdAqsgmjVdDl/pub?gid=1275753329&single=true&output=csv",
-  "sponsor": "https://docs.google.com/spreadsheets/d/e/2PACX-1vTWPXPWfvrt423Vk-e9BtU0CnSrEDorxQAL7Q3QgdvrDs4WDdAAZExZYn_jLkUJwEoNAdAqsgmjVdDl/pub?gid=0&single=true&output=csv"
+  "sponsor": "https://docs.google.com/spreadsheets/d/e/2PACX-1vTWPXPWfvrt423Vk-e9BtU0CnSrEDorxQAL7Q3QgdvrDs4WDdAAZExZYn_jLkUJwEoNAdAqsgmjVdDl/pub?gid=0&single=true&output=csv",
+  "docs": "https://docs.google.com/spreadsheets/d/e/2PACX-1vTWPXPWfvrt423Vk-e9BtU0CnSrEDorxQAL7Q3QgdvrDs4WDdAAZExZYn_jLkUJwEoNAdAqsgmjVdDl/pub?gid=1237554062&single=true&output=csv"
 }
